--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   </head>
 
   <body>
-    <p>Hello World, we are software developers!</p>
+    <!--Hero Section-->
+    <section id="hero">
+      <div class="hero container">
+        <div>
+          <h1>Hello,<span></span></h1>
+          <h1>My Name is<span></span></h1>
+          <h1>Shakil<span></span></h1>
+          <a href="#" type="button" class="cta">Portfolio</a>
+        </div>
+      </div>
+    </section>
+    <!--End Hero Section-->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
