--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
 </head>
 <body>
   
+  <section id="hero">
+
+    <header>
+      <nav id="navbar">
+        <div class="hamburger">
+          <a href="#"><i class="fa fa-bars"></i></a>
+        </div>
+      </nav>
+    </header>
+
+  </section> 
+
 </body>
 </html>
