--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Personal Portfolio</title>
 </head>
 <body>
-  
+  <!--Hero Section-->
   <section id="hero">
 
     <header>
@@ -19,6 +19,37 @@
         </div>
       </nav>
     </header>
+
+    <div class="banner">
+
+      <div class="introduction">
+
+        <div class="title">
+          <div class="self">Hey there.</div>
+          <div class="self">I'm Alex.</div>
+          <div class="profession">I’m a software developer</div>
+        </div>
+        <div class="info">
+          <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            don’t hesitate to contact me.
+          </p>
+        </div>
+        <div class="social">
+          <img src="./image/twitter.png" alt="twitter icon" class="twitter">
+          <img src="./image/Linkedin icon.png" alt="Linkedin icon" class="linkedin">
+          <img src="./image/medium.png" alt="Medium icon" class="medium">
+          <img src="./image/github.png" alt="Github icon" class="github">
+          <img src="./image/angellist.png" alt="Angellist icon" class="angellist">
+        </div>
+
+      </div>
+
+    </div>
+    <div class="drop-down">
+      <div class="chevron">
+        <img src="./image/Union.png" alt="Chevron Icon">
+      </div>
+    </div>
 
   </section> 
 
