--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
       <div class="introduction">
 
         <div class="title">
-          <div class="self">Hey there.</div>
-          <div class="self">I'm Alex.</div>
-          <div class="profession">I’m a software developer</div>
+          <h1 class="self">
+            <span >Hey there.</span>
+            <span>I'm Alex.</span>
+            <span>I’m a software developer</span>
+          </h1>
         </div>
         <div class="info">
           <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
@@ -35,11 +37,13 @@
           </p>
         </div>
         <div class="social">
-          <img src="./image/twitter.png" alt="twitter icon" class="twitter">
-          <img src="./image/Linkedin icon.png" alt="Linkedin icon" class="linkedin">
-          <img src="./image/medium.png" alt="Medium icon" class="medium">
-          <img src="./image/github.png" alt="Github icon" class="github">
-          <img src="./image/angellist.png" alt="Angellist icon" class="angellist">
+          <ul>
+            <li><a href="#"><img src="./image/twitter.png" alt="twitter icon" class="twitter"></a></li>
+            <li><a href="#"><img src="./image/Linkedin icon.png" alt="Linkedin icon" class="linkedin"></a></li>
+            <li><a href="#"><img src="./image/medium.png" alt="Medium icon" class="medium"></a></li>
+            <li><a href="#"><img src="./image/github.png" alt="Github icon" class="github"></a></li>
+            <li><a href="#"><img src="./image/angellist.png" alt="Angellist icon" class="angellist"></a></li>
+          </ul>
         </div>
 
       </div>
