--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
       <div class="introduction">
 
-        <div class="title">
+        <section class="title">
           <h1 class="self">
             <span >Hey there.</span>
             <span>I'm Alex.</span>
             <span>I’m a software developer</span>
           </h1>
-        </div>
+        </section>
         <div class="info">
           <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
             don’t hesitate to contact me.
