--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
     </div>
 
   </section> 
+  <div class="showcase-title">
+    <div class="title-box">
+      <h2>My Recent Works</h2>
+    </div>
+    <div class="separator"></div>
+  </div> 
 
 </body>
 </html>
