create six cards

--- a/index.html
+++ b/index.html
@@ -56,12 +56,106 @@
     </div>
 
   </section> 
+
+<!--Work section title-->
+
   <div class="showcase-title">
     <div class="title-box">
       <h2>My Recent Works</h2>
     </div>
     <div class="separator"></div>
   </div> 
+
+<!--Work Section-->
+
+  <section id="worksection">
+
+    <div class="card item1">
+      <div class="card-info">
+        <h3>Multi-Post Stories Gain+Glory</h3>
+        <ul>
+          <li>Ruby on Rails</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>HTML</li>
+        </ul>
+        <div class="btnbar">
+          <p class="btn"><a href="#">See project</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="card item2">
+      <div class="card-info">
+        <h3>Multi-Post Stories Gain+Glory</h3>
+        <ul>
+          <li>Ruby on Rails</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>HTML</li>
+        </ul>
+        <div class="btnbar">
+          <p class="btn"><a href="#">See project</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="card item3">
+      <div class="card-info">
+        <h3>Multi-Post Stories Gain+Glory</h3>
+        <ul>
+          <li>Ruby on Rails</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>HTML</li>
+        </ul>
+        <div class="btnbar">
+          <p class="btn"><a href="#">See project</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="card item4">
+      <div class="card-info">
+        <h3>Multi-Post Stories Gain+Glory</h3>
+        <ul>
+          <li>Ruby on Rails</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>HTML</li>
+        </ul>
+        <div class="btnbar">
+          <p class="btn"><a href="#">See project</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="card item5">
+      <div class="card-info">
+        <h3>Multi-Post Stories Gain+Glory</h3>
+        <ul>
+          <li>Ruby on Rails</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>HTML</li>
+        </ul>
+        <div class="btnbar">
+          <p class="btn"><a href="#">See project</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="card item6">
+      <div class="card-info">
+        <h3>Multi-Post Stories Gain+Glory</h3>
+        <ul>
+          <li>Ruby on Rails</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>HTML</li>
+        </ul>
+        <div class="btnbar">
+          <p class="btn"><a href="#">See project</a></p>
+        </div>
+      </div>
+    </div>    
+
+  </section>
 
 </body>
 </html>
