--- a/index.html
+++ b/index.html
@@ -157,5 +157,83 @@
 
   </section>
 
+<!--About me Section-->
+
+  <section id="aboutme">
+
+    <div class="aboutwrapper">
+
+      <img src="./image/Mask Group.png" alt="design element" class="top-img">
+      <img src="./image/Group.png" alt="design element" class="bottom-img">
+
+      <div class="aboutbox">
+
+        <div class="about-title">
+          <h2>About me</h2>
+        </div>
+        <div class="descrip">
+          <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            don’t hesitate to contact me.</p>
+        </div>
+        <div class="resumebtn">
+          <a href="#">Get my resume</a>
+        </div>
+      </div>
+
+      <div class="skill-card">
+          <div class="icon-box">
+            <div class="icon">
+              <img src="./image/Group (3).png" alt="world icon">
+            </div>
+          </div>
+          <div class="tagbox">
+            <h4>Languages</h4>
+            <ul>
+              <li>JavaScript</li>
+              <li>Ruby</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+      </div>
+      <div class="skill-card">
+        <div class="icon-box">
+          <div class="icon">
+            <img src="./image/Group (1).png" alt="cube icon">
+          </div>
+        </div>
+        <div class="tagbox">
+          <h4>Frameworks</h4>
+          <ul>
+            <li>React.js</li>
+            <li>Ruby on Rails</li>
+            <li>RSpec</li>
+            <li>Capybara</li>
+            <li>Selenium</li>
+          </ul>
+        </div>
+    </div>
+    <div class="skill-card">
+      <div class="icon-box">
+        <div class="icon">
+          <img src="./image/Icon Name.png" alt="world icon">
+        </div>
+      </div>
+      <div class="tagbox">
+        <h4>Skills</h4>
+        <ul>
+          <li>Database Management</li>
+          <li>Version Control</li>
+          <li>CLI</li>
+          <li>Web Development</li>
+          <li>API Design</li>
+        </ul>
+      </div>
+  </div>
+
+    </div>
+
+  </section>
+
 </body>
 </html>
