Required Changes ard done

--- a/index.html
+++ b/index.html
@@ -163,9 +163,6 @@
 
     <div class="aboutwrapper">
 
-      <img src="./image/Mask Group.png" alt="design element" class="top-img">
-      <img src="./image/Group.png" alt="design element" class="bottom-img">
-
       <div class="aboutbox">
 
         <div class="about-title">
@@ -186,15 +183,17 @@
               <img src="./image/Group (3).png" alt="world icon">
             </div>
           </div>
-          <div class="tagbox">
-            <h4>Languages</h4>
-            <ul>
-              <li>JavaScript</li>
-              <li>Ruby</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
+          <ul class="tagbox">
+            <li>Languages</li>
+            <li>
+              <ul>
+                <li>JavaScript</li>
+                <li>Ruby</li>
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </li>
+          </ul>
       </div>
       <div class="skill-card">
         <div class="icon-box">
@@ -202,16 +201,18 @@
             <img src="./image/Group (1).png" alt="cube icon">
           </div>
         </div>
-        <div class="tagbox">
-          <h4>Frameworks</h4>
-          <ul>
-            <li>React.js</li>
-            <li>Ruby on Rails</li>
-            <li>RSpec</li>
-            <li>Capybara</li>
-            <li>Selenium</li>
-          </ul>
-        </div>
+        <ul class="tagbox">
+          <li>Frameworks</li>
+          <li>
+            <ul>
+              <li>React.js</li>
+              <li>Ruby on Rails</li>
+              <li>RSpec</li>
+              <li>Capybara</li>
+              <li>Selenium</li>
+            </ul>
+          </li>
+        </ul>
     </div>
     <div class="skill-card">
       <div class="icon-box">
@@ -219,16 +220,18 @@
           <img src="./image/Icon Name.png" alt="world icon">
         </div>
       </div>
-      <div class="tagbox">
-        <h4>Skills</h4>
-        <ul>
-          <li>Database Management</li>
-          <li>Version Control</li>
-          <li>CLI</li>
-          <li>Web Development</li>
-          <li>API Design</li>
-        </ul>
-      </div>
+      <ul class="tagbox">
+        <li>Skills</li>
+        <li>
+          <ul>
+            <li>Database Management</li>
+            <li>Version Control</li>
+            <li>CLI</li>
+            <li>Web Development</li>
+            <li>API Design</li>
+          </ul>
+        </li>
+      </ul>
   </div>
 
     </div>
